tests/ui/solver-attribute/invalid/expected
error: invalid argument for `#[kani::solver]` attribute, expected one of the supported solvers (e.g. `kissat`) or a SAT solver binary (e.g. `bin="<SAT_SOLVER_BINARY>"`)\
test.rs:\
|\
| #[kani::solver(123)]\
| ^^^^^^^^^^^^^^^^^^^^
error: aborting due to 1 previous error
